# k64_project_template

./: .gitignore  README.md  init.py  meson.build
core/: startup_MK64F12.S
core/include/: MK64F12_features.h
core/src/: startup_MK64F12.S
k64_files/: frdm-k64f.cfg  k64.ld
scripts/: create_bin.sh  flash.sh  gdb.sh  openocd_server.sh
template_files/k64_files/: k64_cross_properties.cfg
